Stop using deprecated single dash CLI flags

--- a/programming_practice_problems/Makefile
+++ b/programming_practice_problems/Makefile
@@ -3,7 +3,7 @@ py_files := $(wildcard solutions/*.py)
 
 .PHONY: fmt
 fmt: env_ok
-	env/bin/isort -sp .isort.cfg $(py_files)
+	env/bin/isort --sp .isort.cfg $(py_files)
 	env/bin/black $(py_files)
 
 .PHONY: test
