Add doctest to main testing commands

--- a/simple_programming_problems/Makefile
+++ b/simple_programming_problems/Makefile
@@ -9,8 +9,7 @@ fmt: env_ok
 .PHONY: test
 test: check
 	env/bin/python -m unittest discover $(py_dirs) -p "*.py" -v
-	env/bin/python solutions/lists_strings_08.py -v
-	env/bin/python solutions/lists_strings_19.py -v
+	env/bin/python -m doctest solutions/*.py -v
 
 .PHONY: check
 check: env_ok
